--- a/BlazorServer/Pages/Home/Home.razor
+++ b/BlazorServer/Pages/Home/Home.razor
@@ -2,7 +2,7 @@
 @page "/home"
 
 <div id="slider">
-    <img id="slidePhoto fade" src="images/icons/home.jpg" alt="">
+    <img id="slidePhoto fade" src="images/icons/landingPage2.jpg" alt="">
 </div>
 
 <div id="content">
