--- a/BlazorServer/Shared/Navbar.razor
+++ b/BlazorServer/Shared/Navbar.razor
@@ -5,19 +5,21 @@
             Conference booking platform
         </a>
 
-  @*       <div class="dropdown">
+        <div class="dropdown">
             <div class="dropbtn">Manage</div>
             <div class="dropdown-content">
-                <a class="dropbtn" href="hotel">Hotels</a>
-                <a class="dropbtn" href="city">Cities</a>
-                <a class="dropbtn" href="country">Countries</a>
+                <a class="dropbtn" href="room">Rooms</a>
+                <a class="dropbtn" href="equipment">Equipments</a>
+                <a class="dropbtn" href="user">Users</a>
             </div>
-        </div> *@
+        </div>
 
         <div class="dropdown">
             <div class="dropbtn">Create</div>
             <div class="dropdown-content">
                 <a class="dropbtn" href="room/create">Room</a>
+                <a class="dropbtn" href="equipment/create">Equipment</a>
+                <a class="dropbtn" href="booking/create">Booking</a>
             </div>
         </div>
 
