--- a/BlazorServer/_Imports.razor
+++ b/BlazorServer/_Imports.razor
@@ -12,3 +12,12 @@
 @using ConferenceBooking.Application.Services
 @using Radzen 
 @using Radzen.Blazor
+@using ConferenceBooking.Application.Services.Interfaces
+
+@using ConferenceBooking.SharedKernel.Dto.Booking
+@using ConferenceBooking.SharedKernel.Dto.Equipment
+@using ConferenceBooking.SharedKernel.Dto.Room
+@using ConferenceBooking.SharedKernel.Dto.User
+@using ConferenceBooking.SharedKernel.Dto.RoomAvailability
+
+@using Blazored.FluentValidation
