--- a/BlazorServer/Shared/MainLayout.razor
+++ b/BlazorServer/Shared/MainLayout.razor
@@ -1,22 +1,10 @@
 ﻿@inherits LayoutComponentBase
 
-<PageTitle>BlazorServer</PageTitle>
+<PageTitle>Conference Booking Platform </PageTitle>
 
 <div class="page">
-    <div class="sidebar">
-        <NavMenu />
-    </div>
-
-    <main>
-        <div class="top-row px-4">
-            <a href="https://docs.microsoft.com/aspnet/" target="_blank">About</a>
-        </div>
-
-        <article class="content px-4">
-            <Navbar></Navbar>
-                @Body
-
-            
-        </article>
-    </main>
+    <Navbar />
+    @Body
+    
 </div>
+
