--- a/BlazorServer/Pages/Equipment/EquipmentList.razor
+++ b/BlazorServer/Pages/Equipment/EquipmentList.razor
@@ -2,6 +2,7 @@
 
 @inject IEquipmentService _equipmentService
 
+<div style="margin-top: 220px;">
 <table class="table">
     <thead>
         <tr>
@@ -23,6 +24,7 @@
         }
     </tbody>
 </table>
+</div>
 
 @code {
     private List<EquipmentDto> _equipmentList = new List<EquipmentDto>();
