--- a/BlazorServer/Pages/Room/RoomList.razor
+++ b/BlazorServer/Pages/Room/RoomList.razor
@@ -11,10 +11,10 @@
                 Name
             </th>
             <th>
-                Country
+                Localization
             </th>
             <th>
-                Options
+                Capacity
             </th>
         </tr>
     </thead>
